made navbar items smaller and fixed some spacing issues
moved font imports to common.css

vertically centerd navbar items

--- a/src/client/components/About/about.css
+++ b/src/client/components/About/about.css
@@ -39,6 +39,7 @@
 }
 
 .bio {
+  font-family: 'Josefin Sans', sans-serif;
   text-align: justify;
   margin-top: 2rem;
   font-size: 1.15rem;
