--- a/src/client/components/Layout/Navbar/navbar.css
+++ b/src/client/components/Layout/Navbar/navbar.css
@@ -17,20 +17,22 @@
 .middle-container {
   display: flex;
   justify-content: space-between;
-  padding: .4rem .2rem .1rem;
+  padding: .4rem .2rem 0;
   cursor: default;
 }
 
 .inner-container {
   display: flex;
   justify-content: flex-end;
+  padding-right: .55rem;
 }
 
 .link {
   margin-left: 2rem;
-  padding: .4rem .2rem .1rem;
+  padding: .45rem .2rem .1rem;
   color: white;
   cursor: pointer;
+  font-size: 1.8rem;
 }
 
 .active {
@@ -41,6 +43,14 @@
   .outer-container {
     margin-top: 0;
     border-radius: 0;
+  }
+
+  .link {
+    margin-left: .8rem;
+  }
+
+  .inner-container {
+    margin-left: 1rem;
   }
 }
 
